Implement edge discovery, unfortunately calculations take long now